<resources>
    <string name="app_name">美食水水APP</string>
    <string name="search_content_name1">選擇區域</string>
    <string name="search_content_name2">餐點類型</string>
    <string name="search_content_name3">熱門餐點</string>
    <string name="search_content_name4">價位</string>
    <string name="search_content_name5">提供服務</string>
    <string name="search_content_name6">特殊需求</string>
    <string name="food_type_name1">中式</string>
    <string name="food_type_name2">港式</string>
    <string name="food_type_name3">日式</string>
    <string name="food_type_name4">韓式</string>
    <string name="food_type_name5">台式</string>
    <string name="food_type_name6">美式</string>
    <string name="food_type_name7">墨式</string>
    <string name="food_type_name8">泰式</string>
    <string name="food_type_name9">印式</string>
    <string name="food_type_name10">法式</string>
    <string name="food_type_name11">西式</string>
    <string name="food_type_name12">甜點</string>
    <string name="hot_food_name1">燒烤BBQ</string>
    <string name="hot_food_name2">火鍋</string>
    <string name="hot_food_name3">日式料理</string>
    <string name="hot_food_name4">美式漢堡</string>
    <string name="hot_food_name5">義式披薩</string>
    <string name="hot_food_name6">牛排</string>
    <string name="hot_food_name7">法式料理</string>
    <string name="hot_food_name8">韓式料理</string>
    <string name="service_name1">WI-FI</string>
    <string name="service_name2">親子區</string>
    <string name="service_name3">停車位</string>
    <string name="special_requirement_name1">時間限制</string>
    <string name="special_requirement_name2">服務費</string>
    <string name="special_requirement_name3">無低消</string>
    <string name="done">完成</string>
    <string name="modify">確認修改</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_shopinfo">shopinfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">首頁/推薦</string>
    <string name="title_res">附近餐廳</string>
    <string name="title_card">美食抽卡</string>
    <string name="title_story">水水食記</string>
    <string name="title_info">水水資料</string>
    <string name="title_activity_home_3">home_3</string>
    <string name="title_activity_story">story</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">register</string>



    <string-array name="cat">
        <item>請選擇你的喜好！</item>
        <item>中式</item>
        <item>日式</item>
        <item>港式</item>
        <item>韓式</item>
        <item>台式</item>
        <item>美式</item>
        <item>墨式</item>
        <item>泰式</item>
        <item>印式</item>
        <item>法式</item>
        <item>西式</item>
        <item>其他</item>
    </string-array>
</resources>
