<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main2change">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="在開始之前，請先選擇您的喜好："
        android:textColor="@color/cardview_dark_background"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.367">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name1"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name2"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name3"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name4"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name5"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name6"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name7"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name8"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name9"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name10"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name11"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                android:theme="@style/checkbox_style"
                android:background="@color/colorPrimaryDark"
                android:text="@string/food_type_name12"
                android:textSize="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/done" />

    </LinearLayout><![CDATA[

    // tools:text="港式"


    //tools:text="韓式" />



    //tools:text="西式" />



    // tools:text="台式" />



    // tools:text="美式" />



    //tools:text="墨式" />



    // tools:text="泰式" />



    // tools:text="印式" />



    // tools:text="越式" />

















    //tools:text="確認" />






]]>
</android.support.constraint.ConstraintLayout>